2008-08-19  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/wtsapi32.h (_WTS_INFO_CLASS, _WTS_CONNECTSTATE_CLASS,
	WTSQuerySessionInformation, WTSFreeMemory): Define.

2008-07-25 Bo Yang <techrazy@users.sourceforge.net>

	* lib/gdi32.def (SetLayout): Export.

2008-07-25 Bo Yang <techrazy@users.sourceforge.net>

	* include/wincrypt.h  (struct _CRYPT_KEY_PROV_PARAM, 
	struct _CRYPT_KEY_PROV_INFO, CertGetCertificateContextProperty,
	CryptEnumKeyIdentifierProperties, CryptAcquireCertificatePrivateKey,
	CertCreateCertificateContext, CryptGetKeyIdentifierProperty,
	CertSetCertificateContextProperty, CertCompareCertificateName, 
	CryptSetKeyIdentifierProperty, CertOIDToAlgId, CryptGetDefaultProviderA,
	CryptGetDefaultProviderW and many corresponding macroes): Define.
	* lib/crypt32.def  (Export the above 11 functions): Export.
	* include/winerror.h  (CRYPT_E_NOT_FOUND and other crypt related
	macroes): Define.
	

2008-07-24  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/winuser.h (MENUGETOBJECTINFO, MNGO_NOINTERFACE, MNGO_NOERROR,
	MNGOF_TOPGAP, MNGOF_BOTTOMGAP): Define.

2008-07-24  techrazy  <techrazy@users.sourceforge.net>

	* include/wingdi.h (OUT_PS_ONLY_PRECIS): Define.

2008-07-24  Corinna Vinschen  <corinna@vinschen.de>

	* include/lmaccess.h (struct _USER_INFO_4): Define.
	(struct _USER_INFO_23): Define.
	(struct _GROUP_INFO_3): Define.

2008-07-14  Corinna Vinschen  <corinna@vinschen.de>

	* include/iphlpapi.h (GetExtendedTcpTable): Add prototype.
	* include/iprtrmib.h (TCP_TABLE_CLASS, MIB_TCPROW_OWNER_PID,
	MIB_TCPTABLE_OWNER_PID, MIB_TCP6ROW_OWNER_PID,
	MIB_TCP6TABLE_OWNER_PID): Define.
	* lib/iphlpapi.def (GetExtendedTcpTable): Export.

2008-06-25  Brandon Sneed  <nivenh@sourceware.org>

	* include/winbase.h (GetProcessHandleCount, GetSystemRegistryQuota,
	GetThreadIOPendingFlag): Modified to rely on _WIN32_WINNT 0x0501 instead 
	of 0x0502.
	Bug reported by Thomas Denk.
	
2008-06-25  Brandon Sneed  <nivenh@sourceware.org>
