@@ -1003,10 +1003,15 @@ typedef DWORD FLONG;
 #define REG_OPTION_BACKUP_RESTORE	4
 #define REG_OPTION_OPEN_LINK	8
 #define REG_LEGAL_OPTION	15
-#define OWNER_SECURITY_INFORMATION 1
-#define GROUP_SECURITY_INFORMATION 2
-#define DACL_SECURITY_INFORMATION 4
-#define SACL_SECURITY_INFORMATION 8
+#define OWNER_SECURITY_INFORMATION 0x00000001
+#define GROUP_SECURITY_INFORMATION 0x00000002
+#define DACL_SECURITY_INFORMATION 0x00000004
+#define SACL_SECURITY_INFORMATION 0x00000008
+#define LABEL_SECURITY_INFORMATION 0x00000010
+#define UNPROTECTED_SACL_SECURITY_INFORMATION 0x10000000
+#define UNPROTECTED_DACL_SECURITY_INFORMATION 0x20000000
+#define PROTECTED_SACL_SECURITY_INFORMATION 0x40000000
+#define PROTECTED_DACL_SECURITY_INFORMATION 0x80000000
 #define MAXIMUM_PROCESSORS 32
 #define PAGE_NOACCESS	0x0001
 #define PAGE_READONLY	0x0002
