@@ -1,3 +1,13 @@
+2008-08-22 Bo Yang <techrazy@users.sourceforge.net>
+
+	* include/winnt.h (OWNER_SECURITY_INFORMATION, GROUP_SECURITY_INFORMATION,
+	DACL_SECURITY_INFORMATION, SACL_SECURITY_INFORMATION): Correct.
+	* include/winnt.h (OWNER_SECURITY_INFORMATION, GROUP_SECURITY_INFORMATION,
+	DACL_SECURITY_INFORMATION, SACL_SECURITY_INFORMATION,
+	LABEL_SECURITY_INFORMATION, UNPROTECTED_SACL_SECURITY_INFORMATION,
+	UNPROTECTED_DACL_SECURITY_INFORMATION, PROTECTED_SACL_SECURITY_INFORMATION,
+	PROTECTED_DACL_SECURITY_INFORMATION): Define.
+
 2008-08-19  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>
 
 	* include/wtsapi32.h (_WTS_INFO_CLASS, _WTS_CONNECTSTATE_CLASS,
